<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_material_dark"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/about_us"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/aboutus_returnback"
                android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:padding="12dp"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@drawable/shape_aboutus"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/chief_designer"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
            <!-- name part-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/terry"
                android:textColor="@android:color/white"
                android:textSize="22dp"
                android:textStyle="bold"

                />

            <!-- description part -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/terry_description"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_aboutus"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/art_designer"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

            <!-- name part-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/pitos"
                android:textColor="@android:color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

            <!-- description part -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/pitos_description"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>