<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/highlighted_text_material_dark"
    android:orientation="vertical"
    android:weightSum="1">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/accent_material_light"
             android:gravity="center"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:text="@string/java_design_pattern"
             android:textSize="24dp"
              android:textStyle="bold">

         </TextView>
        <ImageView
            android:id="@+id/image_sliding"
            android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="12dp" />

    </FrameLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/creational_pattern_textview"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/creational_patterns"
                android:textSize="20dp"
                android:textStyle="bold"
                android:paddingTop="4dp"
                android:background="@color/accent_material_dark"
                android:clickable="true"/>

            <TextView
                android:id="@+id/structural_pattern_textview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:background="@color/accent_material_dark"
                android:text="@string/structural_patterns"
                android:textSize="20dp"
                android:textStyle="bold"
                android:paddingTop="4dp"
                android:gravity="center"
                android:clickable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/behavioral_pattern_textview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@color/accent_material_dark"
                android:text="@string/behavioral_patterns"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:clickable="true"/>

            <TextView
                android:id="@+id/j2ee_pattern_textview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:background="@color/accent_material_dark"
                android:text="@string/j2ee_patterns"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:clickable="true"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>